--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,30 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app{
   display: flex;
   flex-direction: column;
+}
+.app-header{
+  display: flex;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+  background-color: teal;
+  color: #ffffff;
+  padding: .8em;
 }
-
-.App-link {
-  color: #61dafb;
+.app-button{
+  background-color: rgb(106, 155, 155)  ;
+  padding: .5em;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.app-container{
+  display: flex;
+}
+.app-navbar{
+  width: 25%;
+  height:100%;
+  min-height: 100vh;
+  border-right: 1px solid rgb(121, 114, 114); 
+  background-color: rgb(211, 206, 197)
+}
+.app-body{
+  padding: 1em;
+  width: 75%;
 }
